# CitationMap

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  env.template  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: README.md
examples/: phase3_demo.py
memory-bank/: CitationMapDesignDocument.md  ImplementationPlan.md  progress.md
src/citationmap/: __init__.py
src/citationmap/analysis/: __init__.py  field_norm.py  independence.py  merger.py  uptake.py
src/citationmap/cli/: __init__.py  main.py
src/citationmap/core/: __init__.py  models.py
src/citationmap/data_acquisition/: __init__.py  cache.py  icite.py  openalex.py  patents.py  scholar.py  trials.py
src/citationmap/visualization/: __init__.py  charts.py  dashboards.py  maps.py  reports.py
tests/: __init__.py  test_analysis.py  test_cli.py  test_data_acquisition.py  test_models.py  test_visualization.py
